--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tip Time</string>
-    <string name="coast_of_service">Coast of service</string>
+    <string name="cost_of_service">Coast of service</string>
     <string name="how_was_the_service">How was the service</string>
     <string name="amazing">Amazing (20%)</string>
     <string name="good">Good (18%)</string>
